add github link to website

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <footer class="page-footer font-small purple pt-4">
 
 <!-- Copyright -->
-	<div class="footer-copyright text-center py-3 fixed-bottom text-light">© 2020 Copyright:
-	<a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+	<div class="footer-copyright text-center py-3 fixed-bottom text-light">github: 
+	<a href="https://github.com/salaets-mark"> www.github.com/salaets-mark</a>
 	</div>
 <!-- Copyright -->
 
