--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                             <li><a class="dropdown-item" href="#">arduino</a></li>
                             <li><a class="dropdown-item" href="#">raspberry pi</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <h2 class="dropdown-header">software/h2>
+                            <h2 class="dropdown-header">software</h2>
                             <li><a class="dropdown-item" href="#">python</a></li>
                             <li><a class="dropdown-item" href="#">arduino (c++)</a></li>
-                            <li><a class="dropdown-item" href="#"><HTML/CSS/Javascript></a></li>
+                            <li><a class="dropdown-item" href="#">HTML/CSS/Javascript</a></li>
                             
                         </ul>
 				    </li>
