add image to website

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 	</nav>
 
     <div class="container my-5 div-center">
-
+        <h1>test</h1>
+        <img src="images/pico_temp_hum.jpg" alt="fail">
 
     </div>
 
