--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="container my-5 div-center">
         <h1>test</h1>
-        <img src="images/pico_temp_hum.jpg" alt="fail">
+        <img src="images/pico_temp_hum.jpg" class="img-fluid" alt="fail">
 
     </div>
 
