--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small cyan darken-3 bg-dark fixed-bottom">
+<footer class="page-footer font-small cyan darken-3 bg-dark">
 
 <!-- Footer Elements -->
 <div class="container">
