--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     
     
-    <div class="flex-fill">
+    <div class="flex-fill container">
         <h1>test</h1>
         <img src="images/pico_temp_hum.jpg" class="img-fluid" alt="fail">
         <p style="font-size: 70px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia officia cumque quis quisquam beatae corrupti sint rem aliquam minus, iure voluptatem a, iusto temporibus repudiandae necessitatibus repellendus quia assumenda incidunt.</p>
@@ -104,7 +104,7 @@
 <footer class="page-footer font-small purple pt-4">
 
 <!-- Copyright -->
-	<div class="footer-copyright text-center py-3 fixed-bottom text-light">github: 
+	<div class="footer-copyright text-center py-3 text-light">github: 
 	<a href="https://github.com/salaets-mark"> www.github.com/salaets-mark</a>
 	</div>
 <!-- Copyright -->
