--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <style>
+            .fa-github-square:hover{
+                color: rgb(41, 109, 155);
+            }
+
+            .fa-facebook-square:hover{
+                color: rgb(41, 109, 155);
+            }
+
+            .fa-twitter-square:hover{
+                color: rgb(41, 109, 155);
+            }
+
+            .fa-youtube-square:hover{
+                color: rgb(41, 109, 155);
+            }
+
+            .fa-linkedin:hover{
+                color: rgb(41, 109, 155);
+            }
+        </style>
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -82,13 +102,13 @@
 
         <footer class="page-footer font-small darken-3 bg-dark">
             <div class="container text-center">
-                <div class="row"">
+                <div class="row">
                     <div class="col-md-12 py-5">
                         <a href="https://www.github.com/salaets-mark" style="color:white;"><i class="fa-brands fa-github-square fa-2xl"></i></a>
-                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-square fa-2xl"></i></a>
-                        <a href="https://www.twitter.com"><i class="fa-brands fa-twitter-square fa-2xl"></i></a>
-                        <a href="https://www.youtube.com"><i class="fa-brands fa-youtube-square fa-2xl"></i></a>
-                        <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href="https://www.facebook.com" style="color:white;"><i class="fa-brands fa-facebook-square fa-2xl"></i></a>
+                        <a href="https://www.twitter.com" style="color:white;"><i class="fa-brands fa-twitter-square fa-2xl"></i></a>
+                        <a href="https://www.youtube.com" style="color:white;"><i class="fa-brands fa-youtube-square fa-2xl"></i></a>
+                        <a href="https://www.linkedin.com" style="color:white;"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
                     </div>
                 </div>
             </div>
